--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@types/aos": "^3.0.7",
+        "aos": "^3.0.0-beta.6",
         "concurrently": "^8.2.2"
     }
 }
